# IE4228_Grp5

./: .gitignore  Assignment2 Dl Report Draft  Assignment_1.md  Assignment_2.md  LICENSE  NSCC_Aspire2a_Guide_NTU.md  README.md  Rubric  Rubric_Assignment1
Assignment1/: .coverage  Assignment1_Report_Draft.md  Assignment_1_Computer_vision.ipynb  pyproject.toml  requirements.txt
Assignment1/docs/plans/: 2026-03-19-dlib-hog-detector-design.md  2026-03-19-hybrid-distance-design.md  2026-03-19-pca-reconstruction-design.md  2026-03-23-feature-fusion-triage-design.md
Assignment1/scripts/: augment_gallery.py  download_lfw.py  run_demo.py  run_live.py
Assignment1/src/facerec_classical/: __init__.py  config.py  database.py  detector.py  gui_pyside.py  pipeline.py  preprocessor.py  recognizer.py
Assignment1/tests/: conftest.py  test_database.py  test_detector.py  test_pipeline.py  test_preprocessor.py  test_recognizer.py
Assignment2/: Implementation Plan  litReview.md  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  setup_and_run.md
Assignment2/docs/plans/: 2026-03-18-pyside6-redesign-design.md
Assignment2/nscc_scripts/: benchmark.pbs  setup_env.sh  train_recognition.pbs
Assignment2/scripts/: benchmark.py  build_gallery.py  download_lfw.py
Assignment2/src/facerec/: __init__.py  alignment.py  config.py  database.py  detector.py  gui.py  gui_pyside.py  pipeline.py  recognizer.py
Assignment2/tests/: conftest.py  test_alignment.py  test_database.py  test_detector.py  test_pipeline.py  test_recognizer.py
Assignment2/tests/fixtures/: README.md
(+1 files in other folders)
